# DeepLaw

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
assets/: README.md
benchmarks/: core-candidate-2026-07-15.json  core-v2-candidate-2026-07-15.json  core-v3-candidate-2026-07-15.json  core-v3-candidate-2026-07-16.json  core-v5-candidate-2026-07-15.json
catalogs/: deeplaw-official-cn.json  deeplaw-official-cn.json.sig
contracts/: catalog-signature.v1.schema.json  catalog-trust.v1.schema.json  corpus-release-manifest.v1.schema.json  corpus-release-manifest.v2.schema.json  law-release-info.v1.schema.json  law-release-info.v2.schema.json  law-search-response.v1.schema.json  law-search-response.v2.schema.json  law-segment.v1.schema.json  law-segment.v2.schema.json  law-support.input.v1.schema.json  law-support.input.v2.schema.json  law-support.output.v1.schema.json  law-support.output.v2.schema.json  law-verification.v1.schema.json  legal-evidence-card.v1.schema.json  legal-evidence-card.v2.schema.json  official-catalog.v1.schema.json  private-library-state.v1.schema.json  review-overlay.v1.schema.json
docs/: AGENT_ADAPTERS.md  ANALYTIX_INTEGRATION.md  ARCHITECTURE.md  BENCHMARKS.md  CORPUS_GOVERNANCE.md  DEEPLAW_2.md  DOCUMENT_IR.md  RESEARCH_MATRIX.md  SOURCE_AUDIT_2026-07-14.md  UPSTREAM_REUSE.md
evals/: activation-boundary.jsonl  core-2026-07-14.jsonl
governance/: core-2026-07-14.ai-review.json
tests/: __init__.py  helpers.py  test_catalog_signing.py  (+13 more)
(+38 files in other folders)
